--- a/public/style.css
+++ b/public/style.css
@@ -1,23 +1,3 @@
-h1{
-	text-align: center;
-
-}
-h5{
-	text-align: center;
-
-}
-button:focus{
-outline: 0;
-}
-.fixed-headers{
-	position: relative;
-	left: 35%;
-}
-.header{
-	position: fixed;
-	top: 75px;
-}
-
 
 .close-content button{
 	position: relative;
@@ -61,17 +41,6 @@ p{
 	font-weight: bold;
 
 }
-
-
-.searchbar{
-	position: fixed;
-	margin-top: 13%;
-	margin-left: 112px;
-	width: 10%;
-	
-	display: block;
-
-}
 .custom-dropdown ul li {
 	display: none;
 }
@@ -97,16 +66,15 @@ p{
 }
 .drop{
 	width: 10%;
-	position: fixed;
-	text-align: center;
-	margin-top: 18%;
-	margin-left: 117px;
-	margin-right: auto;
-	line-height: 25px;
-	cursor: pointer;
-	padding-top: 0px;
-	padding-left: 0px;
-	z-index: 2;
+    position: fixed;
+    text-align: center;
+    top: 10px;
+    left: 535px;
+    line-height: 25px;
+    cursor: pointer;
+    padding-top: 0px;
+    padding-left: 0px;
+    z-index: 2;
 }
 .drop a:hover{
 	font-size: 20px;
