--- a/src/styles/SignIn.css
+++ b/src/styles/SignIn.css
@@ -65,6 +65,11 @@
     top: 50%;
     left: 40%;
 }
+.login{
+	position: absolute;
+	top: 60%;
+	left: 45%;
+}
 
 .login button {
 	background:transparent;
@@ -72,8 +77,7 @@
 	color: green;
 	font-family: Arial;
 	font-size: 20px;
-	text-decoration: underline;
-	position: absolute;
+	text-decoration: underline;	
 	cursor: pointer;
 	top: 60%;
 	left: 45%;
@@ -84,10 +88,10 @@
 }
 .create-account{
 	position: absolute;
-	top: 70%;
-	left: 38%;
+	top: 72%;
+	left: 53%;
 }
-.create-account a{
+.create-account button{
 	background:transparent;
 	border: none;
 	color: green;
@@ -96,7 +100,8 @@
 	text-decoration: underline;
 	cursor: pointer;
 }
-.create-account a:hover{
+.create-account button:hover{
+	font-size: 20px;
 	color: rgb(162, 233, 162);
 }
 
